
[build-system]
requires = ["flit_core >=2,<4"]
build-backend = "flit_core.buildapi"

[tool.flit.metadata]
dist-name = "introspection"
module = "introspection"
author = "Paul Pinterits"
description-file = "README.md"
home-page = "https://github.com/Aran-Fey/introspection"
requires-python = ">=3.6,<4"
requires = [
    "ordered-set"
]

[tool.flit.metadata.requires-extra]
test = ["pytest", "tox", "coverage"]
doc = ["sphinx"]
