
[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "introspection"
authors = [{name="Paul Pinterits"}]
dynamic = ["version", "description"]
readme = "README.md"
license = {file="LICENSE"}

requires-python = ">=3.7"
dependencies = [
    "ordered-set",
    "renumerate",
    "sentinel",
    "typing-extensions",
]

[project.optional-dependencies]
test = ["pytest", "pytest-raisin", "tox", "coverage"]
doc = ["sphinx"]

[tool.flit.module]
name = "introspection"

[project.urls]
documentation = "https://Aran-Fey.github.io/introspection/docs/build/index.html"
repository = "https://github.com/Aran-Fey/introspection"
